<resources>
    <string name="app_name">Happiness</string>
    <string name="happiness">오늘의 행복</string>
    <string name="happinessImage">happiness_image</string>
    <string name="id">ID</string>
    <string name="pw">PW</string>
    <string name="login">로그인</string>
    <string name="autoLogin">자동 로그인</string>
    <string name="save_login">아이디 저장</string>
    <string name="forget_pw">비밀번호를 잊으셨나요?</string>
    <string name="wanna_join">계정이 없으신가요?</string>
    <string name="join_button">가입하기</string>
    <string name="join_cancel">취소</string>
    <string name="join_page_title">회원가입</string>
    <string name="name_box">이름</string>
    <string name="nickname_box">닉네임</string>
    <string name="pw_box">password</string>
    <string name="pw_check">password check</string>
    <string name="id_email_box">ID (email)</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_box">로그인</string>
    <string name="save_id">아이디 저장</string>
    <string name="auto_login">자동 로그인</string>
    <string name="login_button">로그인</string>
    <string name="join_btn">회원가입</string>
    <string name="question_account">계정이 없으신가요?</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="make_account">회원가입</string>
    <string name="findpw_title">비밀번호 찾기</string>
    <string name="findpw_putemail">이메일 입력</string>
    <string name="findpw_checkme">본인 확인</string>
    <string name="findpw_resetpw">비밀번호 재설정</string>
    <string name="confirm_name">본인의 이름을 입력하세요.</string>
    <string name="confirm_email">계정을 찾고자 하는 이메일을 입력하세요.</string>
    <string name="confirm_thispage">확인</string>
    <string name="put_name">이름</string>
    <string name="put_email">e-mail</string>
    <string name="happinessfeed_title">나의 행복피드</string>
    <string name="happycategory_button">행복카테고리</string>
    <string name="happymap_button">행복지도</string>
    <string name="myaccount_icon">TODO</string>
    <string name="write_icon">TODO</string>
    <string name="happysearch_icon">TODO</string>
    <string name="title_activity_findid">Sign in</string>
    <string name="title_activity_intro">Sign in</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_plusactivity">plusactivity</string>
</resources>
