<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Space
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/findpw_title"
        android:textColor="#000000"
        android:textSize="25sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/findpw_putemail"
            android:textColor="#000000"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:background="@drawable/border"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/findpw_checkme"
            android:textColor="#000000"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/findpw_resetpw"
            android:textColor="#000000"
            android:textSize="15sp"
            android:layout_marginEnd="10dp"
            />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/confirm_name"
        android:textSize="15sp"
        android:textColor="#000000"
        android:gravity="center_vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />

    <EditText
        android:id="@+id/writeName_findpw"
        android:layout_width="223dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:gravity="center_vertical"
        android:inputType="textPersonName"
        android:maxLength="20"
        />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="비밀번호를 찾고자 하는 이메일을 입력하세요."
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:textColor="#000000"
        android:gravity="center_vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />

    <EditText
        android:id="@+id/writeEmail_findpw"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:gravity="center_vertical"
        android:inputType="textEmailAddress"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_thispage"
        android:textSize="20sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>

</LinearLayout>
