<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--constraint보다 더 안정감 있어 사용하게 되었다. -->
    <!--뷰들 간의 상호작용이 필요하지 않다고 생각. 단순하게 일렬로 배치하기 때문에.-->
    <!--table로 쓰게 되면 한 줄을 추가할 때마다 tablerow를 만들어주고 그 안에 셀들까지 신경을 써줘야 한다.-->

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <Button
        android:id="@+id/go_weather"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/happiness"
        android:textColor="#000000"
        android:textSize="50sp"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"/>

    <TextView
        android:id="@+id/weather_ex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="위 제목을 클릭하시면 현재 날씨를 확인할 수 있습니다."
        android:textColor="#000000"
        android:textSize="10sp"
        android:textStyle="bold" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:contentDescription="@string/happinessImage"
        app:srcCompat="@drawable/happiness"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="44dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:text="@string/login_button" />

    <Button
        android:id="@+id/join_button"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:text="@string/join_button" />

</LinearLayout>